--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');*/
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Josefin+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap');
 
-  :root {
+:root {
     --black: #111503FF;
     --white: #FDFDFEFF;
     --light-gray: #F8F8F9FF;
@@ -10,15 +10,16 @@
     --red-orange: #F03803FF;
     --beige: #F3E0D2FF;
     --back-color: #711010;
-    --dark-blue: #232d5a
+    --dark-blue: #232d5a;
 }
 
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     color: var(--black);
-    }
+    background-color: var(--black);
+}
 
 input {
     margin: 0;
@@ -36,68 +37,68 @@ a {
     color: var(--dark-blue);
 }
 
+.red-marked {
+    color: var(--red-orange);
+}
+
+.white-page {
+    position: fixed;
+    min-width: 90rem;
+    background-color: var(--white);
+    margin-left: calc(50vw - 45rem);
+}
+
 .header {
     display: flex;
-    min-height: 37.55rem;
-    justify-content: space-between;
+    min-height: 44.125rem;
     background: var(--white) url("../img/smiled_nerdman.png") no-repeat;
-    background-size: 40rem;
-    background-position-x: 40rem;
+    background-position-x: 43.875rem;
 }
 
-.header__left ul {
-    display: inline-block;
-    box-sizing: border-box;
-    padding: 0 0 0 3rem;
-    justify-content: space-around;
-    font-size: 0.75rem;
-}
-
-.header__left-spine {
-    margin-top:9rem;
-    list-style: none;
+.header__spine {
+    display: block;
+    margin: 10rem 6.5rem 0 2rem;
+    padding: 0 0 0 0;
     writing-mode: vertical-lr;
     transform: rotate(180deg);
 }
 
-.header__left-text {
-    justify-content: space-between;
-    position: relative;
-    margin: -32rem 0 0 9rem;
+.header__text-block {
+    margin-top: 2.8rem;
 }
-.header__left-text h1 {
-    font-family: 'Josefin Sans', sans-serif;
-    line-height: 5rem;
+
+.header__title {
     font-size: 4.875rem;
     font-weight: 700;
-}
-.header__left-text p {
-    margin-top: -2rem;
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight: 500;
-    max-width: 22rem;
-    line-height: 1.4rem;
-}
-.header__left-text span {
-    color: var(--red-orange);
-}
-.header__left-text h2 {
-    max-width: 15rem;
-    text-align: right;
-    padding-right: 1rem;
-    line-height: 4rem;
-    background: var(--gray);
-    margin-top: 4rem;
+    line-height: 5.85rem;
+    margin: 6.4rem 0 0 0;
 }
 
-.stripe{
-    margin-top: -1rem;
+.header__paragraph {
+    font-size: 1rem;
+    font-style: italic;
+    font-weight: 500;
+    line-height: 1.775rem;
+    max-width: 29rem;
+}
+
+.header__button {
+    font-size: 1rem;
+    font-weight: 500;
+    background: var(--gray);
+    max-width: 11rem;
+    box-sizing: border-box;
+    padding: 0.75rem 1.3rem 0.75rem 3rem;
+    margin-top: 4.2rem;
+}
+
+.beige-stripe {
     background-color: var(--beige);
     background-size: 40rem;
-    max-width: 80rem;
+    max-width: 90rem;
     color: var(--dark-blue);
-    }
+}
 
-.stripe__link {
+.beige-stripe__link {
     list-style: none;
 }
