--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
-/*@import url('https://fonts.cdnfonts.com/css/maria-2');
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');*/
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=Josefin+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 :root {
     --inter: 'Inter', sans-serif;
@@ -76,9 +75,7 @@ a {
 }
 
 .white-page {
-    /*position: absolute;*/
     max-width: 90rem;
-    /*min-height: 485rem;*/
     background-color: var(--white);
     margin: auto;
 }
@@ -192,6 +189,14 @@ a {
 
 .block-1__text {
     margin: 5.5rem 0 0 48rem;
+}
+
+.block-1__text-title {
+    max-width: 29rem;
+}
+
+.block-1__text-paragraph {
+    max-width: 34.1875rem;
 }
 
 .block-1__list {
@@ -391,10 +396,6 @@ a {
     margin-top: 1rem;
 }
 
-.article-1 {
-
-}
-
 .article-1__link {
     content: var(--article-1);
 }
@@ -415,10 +416,20 @@ a {
 }
 
 
-/*COMMUNITY*/
+/*---COMMUNITY---*/
 
-.community {
+.community-subtitle {
+    font-family: var(--inter);
+    font-size: 1rem;
+    margin: 8rem 0 0 0;
 }
+
+.community-title {
+    max-width: 28.4375rem;
+    font-size: 3rem;
+}
+
+/*TEAM*/
 
 .community__team {
 }
@@ -427,12 +438,6 @@ a {
     display: flex;
     justify-content: space-between;
     padding: 0 9.5rem;
-}
-
-.team-text-title {
-    max-width: 28.4375rem;
-    font-size: 3rem;
-    line-height: 4.2rem;
 }
 
 .team-text-paragraph {
@@ -506,7 +511,127 @@ a {
     max-height: 1.5rem;
 }
 
+/*PATIENTS*/
+
+.community__patients {
+    display: flex;
+    flex-direction: column;
+    margin-left: 9.5rem;
+}
+
+.patients-title {
+    font-size: 3rem;
+    font-weight: 700;
+    margin: 0.75rem 0 3.5rem;
+}
+
+.patients__block {
+    background: var(--patients) no-repeat;
+    padding-left: 37.8725rem;
+    min-height: 25.5rem;
+}
+
+.patients__block-text {
+    font-size: 1.875rem;
+    font-style: italic;
+    font-weight: 500;
+    line-height: 2.5rem;
+    max-width: 31.75rem;
+}
+
+.patients__block-name {
+    font-family: var(--inter);
+    font-size: 1.125rem;
+    font-weight: 600;
+    color: var(--dark-blue);
+}
+
+.patients__block-status {
+    font-family: var(--inter);
+    font-size: 0.875rem;
+    letter-spacing: 0.0525rem;
+    color: var(--dark-blue);
+}
+
+.patients__block-photo {
+    display: flex;
+    justify-content: space-between;
+    max-width: 12.5rem;
+}
+
+.patients__block-photo-1 {
+    content: var(--team-woman);
+    max-height: 3.5rem;
+}
+
+.patients__block-photo-2 {
+    content: var(--team-man);
+    max-height: 3.5rem;
+}
+
+.patients__block-photo-3 {
+    content: var(--team-nigga);
+    max-height: 3.5rem;
+}
+
+/*NEWS*/
+
+._news-width {
+    max-width: 20rem;
+}
+
+._news-title-width {
+    margin-left: 9.5rem;
+}
+
+.news__column {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 9.5rem;
+}
+
+.news__author {
+    font-size: 0.75rem;
+    font-weight: bold;
+    line-height: 0.75rem;
+}
+
+.news__column-title {
+    font-size: 1.375rem;
+    font-weight: 700;
+    line-height: 2.125rem;
+    text-decoration-line: underline;
+}
+
+.news__column-date {
+    font-size: 0.75rem;
+    font-weight: 500;
+    line-height: 0.75rem;
+}
+
+.news__column-preview {
+    font-family: var(--inter);
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5rem;
+    margin-bottom: 5.6rem;
+}
+
+.news__column-1::before {
+    content: var(--news-1)
+}
+
+.news__column-2::before {
+    content: var(--news-2)
+}
+
+.news__column-3::before {
+    content: var(--news-3)
+}
+
 /*FOOTER*/
+
 .footer {
     background: var(--black);
     color: var(--white);
