--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
-/*КОРРЕКТИВЫ
-
-Добавить анимации
-Размер шрифтов в пикселях
-Если одно смещение то запись смещение-сторона
-
-*/
-
 :root {
     --inter: 'Inter', sans-serif;
 
-    --black: #111503FF;
-    --white: #FDFDFEFF;
+    --black: #000;
+    --white: #FFF;
     --gray: #ebebeb;
     --light-gray: #f6f6f6;
     --transparent-gray: #939393;
-    --red-orange: #F03803FF;
-    --beige: #F3E0D2FF;
+    --red-orange: #F03803;
+    --yellow:#f4cc72;
+    --beige: #F3E0D2;
     --back-color: #711010;
     --dark-blue: #232d5a;
 
     --header-logo: url("/img/header/logo.png");
-    --header-background: url("/img/header/header-background.png");
-    --header--menu-button: url("/img/header/header-menu-button.png");
+    --block-0-background: url("/img/header/header-background.png");
+    --header-burger: url("../img/header/burger.svg");
+    --header-burger-2: url("../img/header/billy.png");
     --beige-stripe-1-stripe: url("/img/header/stripe.png");
     --beige-stripe-1-spotyfy: url("/img/header/spotify.png");
     --beige-stripe-1-microsoft: url("/img/header/microsoft.png");
@@ -50,6 +44,16 @@
     --news-3: url("/img/community/news-3.png");
 }
 
+/*  @keyframes menu_button {
+    0%{
+
+    }
+    100%{
+
+    }
+
+}   */
+
 body {
     margin: 0;
     padding: 0;
@@ -61,6 +65,7 @@ body {
 input {
     margin: 0;
     padding: 0;
+    font-family: inherit;
     border: none;
     outline: none;
     background: none; /* убирает серую подсветку при активации в некоторых браузерах */
@@ -74,8 +79,24 @@ a {
     color: var(--dark-blue);
 }
 
+h1 {
+    margin: 0;
+    padding: 0;
+}
+ul {
+    list-style: none;
+    padding: 0;
+}
+li  {
+    list-style-type: none;
+}
+
 .red-marked {
     color: var(--red-orange);
+}
+
+._regular-font {
+    font-family: var(--inter);
 }
 
 .beige-background {
@@ -86,54 +107,111 @@ a {
     max-width: 90rem;
     background-color: var(--white);
     margin: auto;
+    overflow-x: hidden;
+
 }
 
-/*HEADER*/
-
 .header {
-    display: flex;
-    min-height: 44.125rem;
-    background: var(--white) var(--header-background) no-repeat;
-    background-position-x: 43.875rem;
+    position: relative;
+    width: 100%;
+    max-width: 90rem;
+}
+
+.menu-button_right {
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 .menu-button {
     position: fixed;
-    background: var(--header--menu-button) no-repeat;
-    margin-left: 81.9rem;
-    box-sizing: border-box;
-    padding: 3rem 3rem 3rem 3.5rem;
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: var(--gray);
+    background: var(--header-burger) var(--red-orange) no-repeat center;
+    border-radius: 0 0 0 90%;
+    height: 5rem;
+    width: 8rem;
+    transform: translateX(-100%);
+    transition: height .5s ease .5s, border-radius .5s ease, width .5s ease;
+    z-index: 1;
 }
 
-.header__spine {
-    display: block;
-    margin: 10rem 6.5rem 0 2rem;
+.menu-button:hover {
+    border-radius: 0;
+    height: 100vh;
+    width: 47.125rem;
+}
+
+.menu-button:hover::after {
+    opacity: 1;
+    width: 47.125rem;
+    height: 100vh;
+}
+
+.menu-button::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: auto;
+    content: "";
+    background: var(--header-burger-2) no-repeat;
+    background-size: 47.125rem 100vh;
+    width: 0;
+    height: 0;
+    opacity: 0;
+    transition: width .5s ease, height .5s ease .5s, opacity .5s ease 1s;
+    z-index: 2;
+}
+
+.block-0 {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    min-height: 44.125rem;
+    background: var(--white) var(--block-0-background) no-repeat;
+    background-position: right;
+}
+
+.block-0__info {
+    display: flex;
+    gap: 6rem;
+}
+
+.block-0__logo {
+    position: relative;
+    left: 9rem;
+    top: 2.7rem;
+    min-width: 10rem;
+    min-height: 1.8rem;
+    background: var(--header-logo) no-repeat;
+    z-index: 1;
+}
+
+
+.block-0__spine {
+    display: flex;
+    align-self: center;
+    gap: 16.5rem;
+    margin-left: 2rem;
     padding: 0;
     writing-mode: vertical-lr;
     transform: rotate(180deg);
 }
 
-.header__text-block {
-    margin-top: 2.8rem;
+.block-0__text-block {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    gap: 1.2rem;
+    max-width: 24.25rem;
 }
 
-.header__text-block::before {
-    content: var(--header-logo);
-    max-height: 1.8rem;
-    max-width: 10rem;
-}
-
-.header__title {
+.block-0__title {
     font-size: 78px;
     font-weight: 700;
     line-height: 5.85rem;
     margin-top: 6.4rem;
 }
 
-.header__paragraph {
+.block-0__paragraph {
     font-size: 16px;
     font-style: italic;
     font-weight: 500;
@@ -141,23 +219,21 @@ a {
     max-width: 29rem;
 }
 
-.header__find-button {
+.block-0__find-button {
     font-size: 16px;
     font-weight: 500;
     background: var(--gray);
     max-width: 11rem;
-    box-sizing: border-box;
-    padding: .75rem 1.3rem .75rem 3rem;
-    margin-top: 4.2rem;
+    padding: .75rem 1.3rem;
 }
 
-/*LINKS-STRIPE*/
 
 .beige-stripe__links {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: space-around;
     flex-direction: row;
-    /*padding: 6rem 9rem 6rem 7rem;*/
     padding: 6rem 0;
     margin: 0 8.8rem;
 }
@@ -184,19 +260,14 @@ a {
     content: var(--beige-stripe-1-behance);
 }
 
-/*BLOCK-1*/
 
 .block-1 {
     background: var(--block-1-background) no-repeat;
     background-position: 8rem 10rem;
     min-height: 52rem;
     display: flex;
-    flex-direction: column;
     justify-content: right;
-}
-
-.block-1__text {
-    margin: 5.5rem 0 0 48rem;
+    padding: 5.5rem
 }
 
 .block-1__text-title {
@@ -210,11 +281,11 @@ a {
 .block-1__list {
     list-style-image: var(--block-1-list);
     font-size: 16px;
-    font-weight: 400;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     box-sizing: border-box;
+    padding-left: 1.5rem;
     min-height: 7.6rem;
     margin-top: 2rem;
 }
@@ -251,7 +322,6 @@ a {
     border-radius: .3125rem;
 }
 
-/*GRAY-STRIPE*/
 
 .gray-stripe {
     background: var(--light-gray);
@@ -269,7 +339,6 @@ a {
 }
 
 .column-name {
-    font-family: var(--inter);
     font-size: 16px;
     font-weight: 400;
     line-height: 1.6rem;
@@ -282,20 +351,17 @@ a {
 }
 
 .column-paragraph {
-    font-family: var(--inter);
     font-size: 16px;
     font-weight: 400;
     line-height: 1.6rem;
 }
 
 .column-button {
-    font-family: var(--inter);
     font-size: 12px;
     font-weight: 500;
     line-height: 1.2rem;
 }
 
-/*BLOCK-2*/
 
 .block-2 {
     min-height: 38.5rem;
@@ -325,7 +391,6 @@ a {
     margin: 8.75rem 0 0 9.3rem;
 }
 
-/*BLOCK-2-STRIPE*/
 
 .block-2__stripe {
     min-height: 18.75rem;
@@ -356,7 +421,6 @@ a {
     margin-top: 7.375rem;
 }
 
-/*VIDEO*/
 
 .video__content {
     min-width: 90rem;
@@ -382,7 +446,6 @@ a {
     padding-top: 2rem;
 }
 
-/*ARTICLES*/
 
 .articles {
     display: flex;
@@ -408,23 +471,33 @@ a {
     content: var(--article-1);
 }
 
+.article-2 {
+    position: relative;
+    top: 2.25rem;
+}
+
 .article-2__link {
     content: var(--article-2);
-    padding-top: 2.25rem;
+}
+
+.article-3 {
+    position: relative;
+    top: 4.5rem;
 }
 
 .article-3__link {
     content: var(--article-3);
-    padding-top: 4.5rem;
+}
+
+.article-4 {
+    position: relative;
+    top: 3.375rem;
 }
 
 .article-4__link {
     content: var(--article-4);
-    padding-top: 3.375rem;
 }
 
-
-/*---COMMUNITY---*/
 
 .community-subtitle {
     font-family: var(--inter);
@@ -437,9 +510,9 @@ a {
     font-size: 48px;
 }
 
-/*TEAM*/
 
-.community__team {
+.community {
+    margin-top: 8.75rem;
 }
 
 .community__team-text {
@@ -519,7 +592,6 @@ a {
     max-height: 1.5rem;
 }
 
-/*PATIENTS*/
 
 .community__patients {
     display: flex;
@@ -582,7 +654,6 @@ a {
     max-height: 3.5rem;
 }
 
-/*NEWS*/
 
 ._news-width {
     max-width: 20rem;
@@ -619,7 +690,7 @@ a {
 
 .news__column-preview {
     font-family: var(--inter);
-    font-size: 16rem;
+    font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 1.5rem;
@@ -638,7 +709,6 @@ a {
     content: var(--news-3)
 }
 
-/*FOOTER*/
 
 .footer {
     background: var(--black);
@@ -661,11 +731,12 @@ a {
     font-weight: 400;
     line-height: 2.5rem;
     opacity: .6;
+    transition: color .1s ease, opacity .1s ease;
 }
 
-.footer__links {
-    list-style: none;
-    padding: 0;
+.footer__link:hover {
+    color: var(--yellow);
+    opacity: .9;
 }
 
 .footer__spine {
