--- a/css/main.css
+++ b/css/main.css
@@ -10,15 +10,15 @@
     --light-gray: #f6f6f6;
     --transparent-gray: #939393;
     --red-orange: #F03803;
-    --yellow:#f4cc72;
+    --yellow: #f4cc72;
     --beige: #F3E0D2;
     --back-color: #711010;
     --dark-blue: #232d5a;
 
     --header-logo: url("/img/header/logo.png");
-    --block-0-background: url("/img/header/header-background.png");
     --header-burger: url("../img/header/burger.svg");
     --header-burger-2: url("../img/header/billy.png");
+    --block-0-background: url("/img/header/header-background.png");
     --beige-stripe-1-stripe: url("/img/header/stripe.png");
     --beige-stripe-1-spotyfy: url("/img/header/spotify.png");
     --beige-stripe-1-microsoft: url("/img/header/microsoft.png");
@@ -44,16 +44,6 @@
     --news-3: url("/img/community/news-3.png");
 }
 
-/*  @keyframes menu_button {
-    0%{
-
-    }
-    100%{
-
-    }
-
-}   */
-
 body {
     margin: 0;
     padding: 0;
@@ -68,14 +58,14 @@ input {
     font-family: inherit;
     border: none;
     outline: none;
-    background: none; /* убирает серую подсветку при активации в некоторых браузерах */
-    -webkit-appearance: none; /* убирает стили браузера в Chrome и Safari */
-    -moz-appearance: none; /* убирает стили браузера в Firefox */
-    appearance: none; /* убирает стили браузера для остальных */
+    background: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 a {
-    text-decoration: none; /* убирает подчеркивание */
+    text-decoration: none;
     color: var(--dark-blue);
 }
 
@@ -83,11 +73,13 @@ h1 {
     margin: 0;
     padding: 0;
 }
+
 ul {
     list-style: none;
     padding: 0;
 }
-li  {
+
+li {
     list-style-type: none;
 }
 
@@ -320,6 +312,13 @@ li  {
     align-items: flex-start;
     gap: .625rem;
     border-radius: .3125rem;
+    transition: border-radius .75s ease;
+}
+
+.box-link:hover {
+    border-radius: 5rem;
+    color: var(--red-orange);
+    background: var(--yellow);
 }
 
 
