--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
     --light-gray: #f6f6f6;
     --transparent-gray: #939393;
     --red-orange: #F03803;
+    --transparent-orange: #F0380334;
     --yellow: #f4cc72;
     --beige: #F3E0D2;
     --back-color: #711010;
@@ -26,6 +27,7 @@
     --beige-stripe-1-behance: url("/img/block-0/beige-stripe-1/behance.png");
     --block-1-background: url("/img/block-1/block-1-background.png");
     --block-1-list: url("/img/block-1/arrows.png");
+    --gray-stripe-column-line: url("/img/block-1/line.png");
     --block-2-image-1: url("/img/block-2/block-2-image-1.png");
     --block-2-image-2: url("/img/block-2/block-2-image-2.png");
     --article-1: url("/img/article/article-1.png");
@@ -69,7 +71,12 @@ a {
     color: var(--dark-blue);
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4, h5 {
+    margin: 0;
+    padding: 0;
+}
+
+p {
     margin: 0;
     padding: 0;
 }
@@ -91,9 +98,6 @@ li {
     font-family: var(--inter);
 }
 
-.beige-background {
-    background-color: var(--beige);
-}
 
 .white-page {
     max-width: 90rem;
@@ -129,12 +133,12 @@ li {
 .menu-button:hover {
     border-radius: 0;
     height: 100vh;
-    width: 47.125rem;
+    width: 90rem;
 }
 
 .menu-button:hover::after {
     opacity: 1;
-    width: 47.125rem;
+    width: 90rem;
     height: 100vh;
 }
 
@@ -145,7 +149,7 @@ li {
     margin: auto;
     content: "";
     background: var(--header-burger-2) no-repeat;
-    background-size: 47.125rem 100vh;
+    background-size: 90rem 100vh;
     width: 0;
     height: 0;
     opacity: 0;
@@ -156,7 +160,6 @@ li {
 .block-0 {
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
     min-height: 44.125rem;
     background: var(--white) var(--block-0-background) no-repeat;
     background-position: right;
@@ -192,15 +195,19 @@ li {
     display: flex;
     flex-direction: column;
     align-self: center;
+    align-items: flex-start;
     gap: 1.2rem;
     max-width: 24.25rem;
 }
 
 .block-0__title {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     font-size: 78px;
     font-weight: 700;
     line-height: 5.85rem;
-    margin-top: 6.4rem;
+    min-height: 21.5rem;
 }
 
 .block-0__paragraph {
@@ -215,19 +222,31 @@ li {
     font-size: 16px;
     font-weight: 500;
     background: var(--gray);
-    max-width: 11rem;
-    padding: .75rem 1.3rem;
+    min-width: 11rem;
+    min-height: 3.3125rem;
+    transition: .1s;
 }
 
+.block-0__find-button:hover {
+    scale: 105%;
+    box-shadow: 0 0 5rem var(--beige);
+    border-radius: .5rem;
+}
+
+.block-0__stripe {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 14.5rem;
+}
+
+.beige-background {
+    background-color: var(--beige);
+}
 
 .beige-stripe__links {
     display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    justify-content: space-around;
-    flex-direction: row;
-    padding: 6rem 0;
-    margin: 0 8.8rem;
+    gap: 3.6rem;
 }
 
 .beige-stripe__links-1 {
@@ -240,26 +259,37 @@ li {
 
 .beige-stripe__links-3 {
     content: var(--beige-stripe-1-microsoft);
-    margin-right: 1.5rem;
 }
 
 .beige-stripe__links-4 {
     content: var(--beige-stripe-1-dropbox);
-    margin-right: 2rem;
 }
 
 .beige-stripe__links-5 {
     content: var(--beige-stripe-1-behance);
 }
 
+._links-border {
+    border: .125rem solid var(--transparent-orange);
+    border-radius: 1rem;
+    transition: .15s;
+}
+
+._links-border:hover {
+    border-color: var(--yellow);
+    box-shadow: 0 0 3rem var(--light-gray);
+    scale: 105%;
+}
 
 .block-1 {
-    background: var(--block-1-background) no-repeat;
-    background-position: 8rem 10rem;
-    min-height: 52rem;
+    min-height: 52.2rem;
     display: flex;
-    justify-content: right;
-    padding: 5.5rem
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.block-1::before {
+    content: var(--block-1-background);
 }
 
 .block-1__text-title {
@@ -271,15 +301,15 @@ li {
 }
 
 .block-1__list {
-    list-style-image: var(--block-1-list);
     font-size: 16px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    box-sizing: border-box;
-    padding-left: 1.5rem;
     min-height: 7.6rem;
-    margin-top: 2rem;
+}
+
+.block-1__list-marker::before {
+    content: var(--block-1-list);
 }
 
 .block-2__text-title {
@@ -319,6 +349,7 @@ li {
     border-radius: 5rem;
     color: var(--red-orange);
     background: var(--yellow);
+    scale: 108%;
 }
 
 
@@ -326,21 +357,27 @@ li {
     background: var(--light-gray);
     display: flex;
     justify-content: center;
-    padding: 6.63rem 2.5rem 6.62rem 0;
+    align-items: center;
+    min-height: 29.875rem;
 }
 
 .gray-stripe__column {
-    max-width: 23.8rem;
-    box-sizing: border-box;
-    padding-left: 2.6rem;
-    border-left: .3rem solid var(--red-orange);
-    margin-left: 3.25rem;
+    max-height: 16.625rem;
+    max-width: 25rem;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 2.6rem;
+    flex-direction: column;
+}
+
+.gray-stripe__column::before {
+    content: var(--gray-stripe-column-line);
 }
 
 .column-name {
     font-size: 16px;
     font-weight: 400;
-    line-height: 1.6rem;
+    line-height: 2.4rem;
 }
 
 .column-title {
@@ -350,6 +387,8 @@ li {
 }
 
 .column-paragraph {
+    color: var(--transparent-gray);
+    max-width: 18.315rem;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.6rem;
@@ -358,7 +397,7 @@ li {
 .column-button {
     font-size: 12px;
     font-weight: 500;
-    line-height: 1.2rem;
+    line-height: 2.2rem;
 }
 
 
@@ -366,6 +405,7 @@ li {
     min-height: 38.5rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .block-2__images {
@@ -374,12 +414,11 @@ li {
     justify-content: right;
     max-width: 23.6875rem;
     max-height: 23.1875rem;
-    margin-top: 8.75rem;
+    gap: 2rem;
 }
 
 .block-2_image-1 {
     content: var(--block-2-image-1);
-    padding-right: 2rem;
 }
 
 .block-2_image-2 {
@@ -387,7 +426,12 @@ li {
 }
 
 .block-2__text {
-    margin: 8.75rem 0 0 9.3rem;
+    position: relative;
+    left: 9.3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1.31rem;
 }
 
 
@@ -449,6 +493,14 @@ li {
 .articles {
     display: flex;
     justify-content: space-between;
+}
+
+.article__link-scale {
+    transition: .3s;
+}
+
+.article__link-scale:hover {
+    scale: 110%;
 }
 
 .article-category {
