--- a/css/main.css
+++ b/css/main.css
@@ -549,10 +549,12 @@ li {
     content: var(--article-4);
 }
 
-.community__patients {
+.community {
     position: relative;
-    left: 8.5rem;
+    top: 12rem;
+    left: 9.5rem;
 }
+
 
 .community-subtitle {
     display: flex;
@@ -569,14 +571,10 @@ li {
 }
 
 
-.community {
-    margin-top: 8.75rem;
-}
-
 .community__team-text {
     display: flex;
-    justify-content: center;
-    gap: 11.2rem;
+    justify-content: flex-start;
+    gap: 12.7rem
 }
 
 .team-text-paragraph {
@@ -587,7 +585,7 @@ li {
 
 .community__team-photos {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 2.6rem;
 }
 
@@ -618,7 +616,7 @@ li {
 
 .community__team-info {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 3rem;
 }
 
@@ -677,13 +675,9 @@ li {
     font-style: italic;
     font-weight: 500;
     line-height: 2.5rem;
+    min-height: 12.5rem;
     max-width: 31.75rem;
 }
-
-/*.patients__block-text::before {*/
-/*    content: var(--patients);*/
-/*    min-height: 25.5rem;*/
-/*}*/
 
 .patients__block-name {
     font-family: var(--inter);
@@ -700,6 +694,8 @@ li {
 }
 
 .patients__block-photo {
+    position: relative;
+    top: 1.5rem;
     display: flex;
     justify-content: space-between;
     max-width: 12.5rem;
@@ -720,19 +716,24 @@ li {
     max-height: 3.5rem;
 }
 
+.community__news {
+    min-height: 64rem;
+}
 
 ._news-width {
     max-width: 20rem;
 }
 
-._news-title-width {
-    margin-left: 9.5rem;
-}
-
 .news__column {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 4.69rem;
+}
+
+._news-column-text {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .news__author {
@@ -760,7 +761,6 @@ li {
     font-style: normal;
     font-weight: 400;
     line-height: 1.5rem;
-    margin-bottom: 5.6rem;
 }
 
 .news__column-1::before {
